--- a/less/index.less
+++ b/less/index.less
@@ -30,6 +30,19 @@
 }
 
 
+/*讓footer區永遠置底*/
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  body {
+    display: flex; /*使物件依序排列*/
+    flex-direction: column; /*使物件垂直排列*/
+  }
+.main{
+    flex-grow: 1; /*可佔滿垂直剩餘的空間*/
+}
+
 /* -------------- */
 /* banner區域樣式 */
 .banner {
