--- a/css/common.css
+++ b/css/common.css
@@ -82,7 +82,23 @@
   font-size: 1.57998683vw;
   vertical-align: bottom;
 }
-/* footer區域 */
+/* footer */
+/*footer區域置底寫法*/
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+body {
+  display: flex;
+  /*使物件依序排列*/
+  flex-direction: column;
+  /*使物件垂直排列*/
+}
+.main {
+  flex-grow: 1;
+  /*可佔滿垂直剩餘的空間*/
+}
 .footer {
   margin-top: 13.16655695vw;
   height: 10.53324556vw;
