--- a/css/index.css
+++ b/css/index.css
@@ -19,22 +19,6 @@
 .log_sign .signup {
   background-color: #ffbd59;
 }
-/*讓footer區永遠置底*/
-html,
-body {
-  height: 100%;
-  margin: 0;
-}
-body {
-  display: flex;
-  /*使物件依序排列*/
-  flex-direction: column;
-  /*使物件垂直排列*/
-}
-.main {
-  flex-grow: 1;
-  /*可佔滿垂直剩餘的空間*/
-}
 /* -------------- */
 /* banner區域樣式 */
 .banner {
@@ -57,6 +41,7 @@ body {
 .banner .left ul {
   display: flex;
   width: 71.0994075vw;
+  animation: smallchange 9s infinite ;
 }
 .banner .left ul li {
   height: 15.79986833vw;
@@ -79,6 +64,7 @@ body {
 .banner .center ul {
   display: flex;
   width: 118.49901251vw;
+  animation: centerchange 9s infinite ;
 }
 .banner .center ul li {
   height: 26.33311389vw;
@@ -106,6 +92,7 @@ body {
 .banner .right ul {
   display: flex;
   width: 71.0994075vw;
+  animation: smallchange 9s infinite;
 }
 .banner .right ul li {
   height: 15.79986833vw;
