--- a/less/common.less
+++ b/less/common.less
@@ -107,8 +107,21 @@
 
 }
 
-/* footer區域 */
+/* footer */
 
+/*footer區域置底寫法*/
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  body {
+    display: flex; /*使物件依序排列*/
+    flex-direction: column; /*使物件垂直排列*/
+  }
+  .main {
+    flex-grow: 1; /*可佔滿垂直剩餘的空間*/
+  }
+  
 .footer {
     margin-top: (200 / @vw);
     height: (160 / @vw);
