--- a/less/common.less
+++ b/less/common.less
@@ -32,10 +32,10 @@
         left: 10%;
         width: (1362 / @vw);
         height: (85 / @vw);
-        //background-color: pink;
+        // background-color: pink;
 
         .logo {
-            margin-right: (50 / @vw);
+            margin-right: (90 / @vw);
             width: (121 / @vw);
             height: (85 / @vw);
 
@@ -57,10 +57,10 @@
             display: flex;
             margin: (9 / @vw) (68 / @vw) (6 / @vw) 0;
             padding-left: (32 / @vw);
-            width: (809 / @vw);
-            height: (66 / @vw);
+            width: (735 / @vw);
+            height: (60 / @vw);
             background-color: #fff;
-            border-radius: (66 / @vw);
+            border-radius: (60 / @vw);
 
             &:focus-within {
                 border: 2px solid orange;
@@ -69,20 +69,20 @@
 
             form {
                 input {
-                    width: (587 / @vw);
-                    height: (66 / @vw);
+                    width: (510 / @vw);
+                    height: (60 / @vw);
                     background-color: transparent;
-                    line-height: (66 / @vw);
+                    line-height: (64 / @vw);
 
                     &::placeholder {
-                        font-size: (15 / @vw);
+                        font-size: (17 / @vw);
                         color: #A6A6A6;
                     }
                 }
             }
 
             .line {
-                margin-right: (23 / @vw);
+                margin-right: (16 / @vw);
                 align-self: center;
                 width: (1 / @vw);
                 height: (26 / @vw);
@@ -93,6 +93,7 @@
                 align-self: center;
                 font-size: (15 / @vw);
                 color: #A6A6A6;
+                cursor: pointer;
 
                 span {
                     margin-right: (10 / @vw);
