--- a/less/common.less
+++ b/less/common.less
@@ -71,8 +71,9 @@
                 input {
                     width: (510 / @vw);
                     height: (60 / @vw);
+                    font-size: (17 / @vw);
                     background-color: transparent;
-                    line-height: (64 / @vw);
+                    line-height: (60 / @vw);
 
                     &::placeholder {
                         font-size: (17 / @vw);
