--- a/less/common.less
+++ b/less/common.less
@@ -30,7 +30,7 @@
         position: absolute;
         top: (20 / @vw);
         left: 10%;
-        width: (1362 / @vw);
+        width: (1252 / @vw);
         height: (85 / @vw);
         // background-color: pink;
 
@@ -87,7 +87,7 @@
                 align-self: center;
                 width: (1 / @vw);
                 height: (26 / @vw);
-                background-color: rgba(0, 0, 0, 0.5);
+                background-color: #A6A6A6;
             }
 
             i {
