--- a/less/menu.less
+++ b/less/menu.less
@@ -2,31 +2,168 @@
 
 @vw: 15.19vw;
 
-.user_function{
-    width: (238 / @vw);
-    height: (85 / @vw);
-    background-color: green;
-}
-
-.shopinfo{
-    
-    height: (100 / @vw);
-    background-color: pink;
-    margin-bottom: (50 / @vw);
-}
-
-.menu{
+.user_function {
     display: flex;
     justify-content: space-between;
+    width: (238 / @vw);
+    height: (85 / @vw);
+    // background-color: green;
+    line-height: (85 / @vw);
 
-    .left{
-        width: (230 / @vw);
-        height: (340 / @vw);
-        background-color: pink;
+    i {
+        font-size: (50 / @vw);
+        color: orange;
+        cursor: pointer;
     }
-    .right{
+}
+
+.shopinfo {
+    display: flex;
+    height: (100 / @vw);
+    // background-color: pink;
+    margin-bottom: (50 / @vw);
+
+    .pic {
+        width: (100 / @vw);
+        height: (100 / @vw);
+        background-color: green;
+        margin-right: (50 / @vw);
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex: 1;
+        height: 100%;
+        // background-color: blue;
+
+        h3 {
+            font-size: (26 / @vw);
+            font-weight: 900;
+        }
+
+        p {
+            font-size: (16 / @vw);
+            color: #A6A6A6;
+        }
+
+        .comment {
+
+            .bi-star-fill,
+            .bi-star-half {
+                color: orange;
+            }
+        }
+    }
+
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    flex // height: 80vh;
+
+    background-color: blue;
+
+    .left {
+        padding: (50 / @vw) 0;
+        width: (230 / @vw);
+        height: auto;
+        // background-color: pink;
+
+
+        ul {
+            li {
+                display: flex;
+                justify-content: flex-end;
+                padding-right: (16 / @vw);
+                margin-bottom: (20 / @vw);
+                height: (50 / @vw);
+                line-height: (50 / @vw);
+                background-color: #e6c7bd;
+                border-radius: (50 / @vw);
+                cursor: pointer;
+
+                h4 {
+                    flex: 1;
+                    text-align: center;
+                    font-size: (18 / @vw);
+                    font-weight: 700;
+                }
+
+                i {
+                    font-size: (22 / @vw);
+                    color: transparent;
+                }
+
+                &:hover {
+                    background-color: #dfd8d7;
+
+                    i {
+                        color: #e75a70;
+                    }
+                }
+
+            }
+        }
+
+    }
+
+    .right {
+        padding-right: (20 / @vw);
         width: (860 / @vw);
-        height: (340 / @vw);
-        background-color: greenyellow;
+        height: 100vh;
+        // background-color: greenyellow;
+        overflow: auto;
+
+        h4 {
+            line-height: (50 / @vw);
+            font-size: (20 / @vw);
+            font-weight: 700;
+        }
+
+        ul {
+            padding-bottom: (50 / @vw);
+            display: grid;
+            grid-template-columns: auto auto auto auto auto;
+            row-gap: (50 / @vw);
+        }
+
+        li {
+            padding-bottom: (30 / @vw);
+            width: (130 / @vw);
+            height: (174 / @vw);
+            border-radius: (15 / @vw);
+            // background-color: pink;
+            cursor: pointer;
+
+            &:hover{
+                background-color: #f8f8f8;
+            }
+
+            .pic {
+                width: (130 / @vw);
+                height: (130 / @vw);
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+            }
+
+            p{
+                text-align: center;
+                font-size: (14 / @vw);
+            }
+        }
     }
 }
