--- a/less/common.less
+++ b/less/common.less
@@ -63,7 +63,7 @@
             border-radius: (60 / @vw);
 
             &:focus-within {
-                border: 2px solid orange;
+                border: 2px solid #ffbd59;
                 /* 設定聚焦時的邊框顏色 */
             }
 
