--- a/less/menu.less
+++ b/less/menu.less
@@ -12,7 +12,7 @@
 
     i {
         font-size: (50 / @vw);
-        color: orange;
+        color: #ffbd59;
         cursor: pointer;
     }
 }
@@ -58,7 +58,7 @@
 
             .bi-star-fill,
             .bi-star-half {
-                color: orange;
+                color: #ffbd59;
             }
         }
     }
@@ -129,7 +129,7 @@
 
         ul {
             padding-bottom: (50 / @vw);
-            display: grid;
+            display: grid; 
             grid-template-columns: auto auto auto auto auto;
             row-gap: (50 / @vw);
         }
