--- a/css/shopcart.css
+++ b/css/shopcart.css
@@ -20,7 +20,7 @@
   padding: 0 10%;
   width: 50%;
   height: 100%;
-  border-right: 10px solid #e6c7bd;
+  border-right: 5px solid #e6c7bd;
 }
 .content .left h3 {
   font-size: 2.10664911vw;
@@ -57,8 +57,52 @@
   cursor: pointer;
 }
 .content .right {
-  padding: 0 10%;
+  padding: 3.94996708vw 5% 0 5%;
   width: 50%;
   height: auto;
-  background-color: skyblue;
+}
+.content .right .userinfo {
+  padding: 0 10%;
+  width: 100%;
+  height: 19.74983542vw;
+  border-bottom: 3px solid #e6c7bd;
+}
+.content .right .userinfo p {
+  padding-left: 0.65832785vw;
+  margin-bottom: 1.31665569vw;
+  height: 3.29163924vw;
+  line-height: 3.29163924vw;
+  border: 1px solid #dfd8d7;
+}
+.content .right .checkout {
+  padding: 10% 10%;
+  width: 100%;
+  height: 13.16655695vw;
+}
+.content .right .checkout p {
+  margin-bottom: 0.98749177vw;
+}
+.content .right .checkout .total {
+  display: flex;
+  justify-content: space-between;
+  height: 3.94996708vw;
+}
+.content .right .checkout .total p {
+  font-size: 1.7116524vw;
+  line-height: 3.94996708vw;
+}
+.content .right .checkout .total button {
+  width: 7.89993417vw;
+  height: 3.94996708vw;
+  line-height: 3.94996708vw;
+  font-size: 1.31665569vw;
+  background-color: #fbfbc7;
+  border: none;
+  border-radius: 0.65832785vw;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.content .right .checkout .total button:hover {
+  font-weight: 700;
+  box-shadow: 2px 3px 10px 1px rgba(0, 0, 0, 0.5);
 }
