--- a/css/back_login.css
+++ b/css/back_login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=greek-ext');
 
 body{
-	background-image: url("https://catalonia.com/documents/176177/179273/food-beverage-capcalera.jpg/e7db317a-af55-0ef4-1c06-660a5f096db3?t=1668498657683");
+	background-image: url("../img/back_login_bgimg.jpg");
 	background-position: center;
     background-origin: content-box;
     background-repeat: no-repeat;
