--- a/less/index.less
+++ b/less/index.less
@@ -17,7 +17,7 @@
 
 .log_sign button:hover {
     transform: scale(1.1);
-    box-shadow: 2px 3px 10px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: (2 / @vw) (3 / @vw) (10 / @vw) (1 / @vw) rgba(0, 0, 0, 0.5);
 }
 
 .log_sign .login {
