--- a/less/menu.less
+++ b/less/menu.less
@@ -89,6 +89,7 @@
                 border-radius: (50 / @vw);
                 cursor: pointer;
 
+
                 h4 {
                     flex: 1;
                     text-align: center;
@@ -103,6 +104,17 @@
 
                 &:hover {
                     background-color: #dfd8d7;
+
+                    i {
+                        color: #e75a70;
+                    }
+                }
+
+
+                &.active {
+                    background-color: #ffbd59;
+                    color: #fff;
+                    font-weight: bold;
 
                     i {
                         color: #e75a70;
@@ -129,7 +141,7 @@
 
         ul {
             padding-bottom: (50 / @vw);
-            display: grid; 
+            display: grid;
             grid-template-columns: auto auto auto auto auto;
             row-gap: (50 / @vw);
         }
@@ -142,7 +154,7 @@
             // background-color: pink;
             cursor: pointer;
 
-            &:hover{
+            &:hover {
                 background-color: #f8f8f8;
             }
 
@@ -158,7 +170,7 @@
 
             }
 
-            p{
+            p {
                 text-align: center;
                 font-size: (14 / @vw);
             }
