--- a/css/signup.css
+++ b/css/signup.css
@@ -73,6 +73,15 @@ body {
     font-size: 16px;
 }
 
+.form-group select {
+    width: 40%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
 .next-btn,
 .btn {
     width: 100%;
