--- a/FullDemo/src/main/resources/static/less/index.less
+++ b/FullDemo/src/main/resources/static/less/index.less
@@ -55,7 +55,7 @@
             animation: smallchange 9s infinite;
 
             li {
-                height: (240 / @vw);
+                width: (360 / @vw);
 
                 img {
                     width: 100%;
@@ -84,7 +84,7 @@
             animation: centerchange 9s infinite;
 
             li {
-                height: (400 / @vw);
+                width: (600 / @vw);
 
                 img {
                     width: 100%;
@@ -155,7 +155,7 @@
             animation: smallchange 9s infinite;
 
             li {
-                height: (240 / @vw);
+                width: (360 / @vw);
 
                 img {
                     width: 100%;
