--- a/FullDemo/src/main/resources/static/less/shopcart.less
+++ b/FullDemo/src/main/resources/static/less/shopcart.less
@@ -10,11 +10,7 @@
     // background-color: green;
     line-height: (85 / @vw);
 
-    i {
-        font-size: (50 / @vw);
-        color: orange;
-        cursor: pointer;
-    }
+    //隱藏購物車
     .bi-cart3{
         visibility: hidden;
     }
