--- a/FullDemo/src/main/resources/static/less/index.less
+++ b/FullDemo/src/main/resources/static/less/index.less
@@ -243,6 +243,10 @@
                         font-size: (24 / @vw);
                         line-height: (40 / @vw);
                         font-weight: 900;
+
+                        span{
+                            font-size: (18 / @vw);
+                        }
                     }
 
                     strong {
