--- a/FullDemo/src/main/resources/static/css/orderModal.css
+++ b/FullDemo/src/main/resources/static/css/orderModal.css
@@ -58,6 +58,7 @@
     width: 100%;
     height: 30px;
     cursor: pointer;
+    
 }
 .selection div:hover{
     background-color: #fbfbc7;
@@ -124,7 +125,7 @@
     border-radius: 10px;
     cursor: pointer;
   }
-  .submitButton button:hover{
+  .submitButton #canOrder:hover{
     box-shadow: 2px 3px 10px 1px rgba(0, 0, 0, 0.5);
   }
   
