--- a/FullDemo/src/main/resources/static/less/menu.less
+++ b/FullDemo/src/main/resources/static/less/menu.less
@@ -13,7 +13,7 @@
     .pic {
         width: (100 / @vw);
         height: (100 / @vw);
-        background-color: green;
+        // background-color: green;
         margin-right: (50 / @vw);
 
         img {
