--- a/FullDemo/src/main/resources/static/less/shopcart.less
+++ b/FullDemo/src/main/resources/static/less/shopcart.less
@@ -18,7 +18,7 @@
 
 .content{
     display: flex;
-    // height: 100vh;
+    height: 100vh;
     // background-color: pink;
 
     .left{
@@ -81,14 +81,23 @@
             padding: 0 10%;
             width: 100%;
             height: (300 / @vw);
-            border-bottom: 3px solid #e6c7bd;
+            border-bottom: (3 / @vw) solid #e6c7bd;
 
             p{
-                padding-left: (10 / @vw);
+                padding-left: (10 / @vw);   
                 margin-bottom: (20 / @vw);
-                height: (50 / @vw);
-                line-height: (50 / @vw);
-                border: 1px solid #dfd8d7;
+                height: (52 / @vw);
+                line-height: (52 / @vw);
+                border: (1 / @vw)   solid #dfd8d7;
+
+                input{
+                    font-size: (16 / @vw);
+                    font-weight: 700;
+                    width: 80%;
+                    height: (50 / @vw  );
+                    line-height: (50 / @vw  );
+                    background-color: transparent;
+                }
             }
         }
 
